--- a/.github/workflows/main_maoleawproject.yml
+++ b/.github/workflows/main_maoleawproject.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: pnpm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          pnpm install
+          pnpm run build --if-present
+          pnpm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
