--- a/.github/workflows/main_maoleawproject.yml
+++ b/.github/workflows/main_maoleawproject.yml
@@ -21,11 +21,11 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: pnpm install, build, and test
+      - name: npm install, build, and test
         run: |
-          pnpm install
-          pnpm run build --if-present
-          pnpm run test --if-present
+          npm install
+          npm run build --if-present
+          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -57,9 +57,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_FF31174EDC4D49238ADC56F4FFFB45C8 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9DBF5C18593B45D7BE14CD05116E8127 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B919DCDEBE5A4787BC6A96892841A2E0 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_3EEBE99B33B24D079754FB86E165027D }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_663BF01E7DEA479D9C2C1C6D69BFE305 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6CAD1CF4E51B49859ACD1617A1F6A1A1 }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
