--- a/.github/workflows/main_maoleawproject.yml
+++ b/.github/workflows/main_maoleawproject.yml
@@ -21,8 +21,9 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: pnpm install, build, and test
+      - name: npm install, build, and test
         run: |
+          npm install pnpm
           pnpm install
           pnpm run build --if-present
           pnpm run test --if-present
