--- a/.github/workflows/main_maoleawproject.yml
+++ b/.github/workflows/main_maoleawproject.yml
@@ -14,26 +14,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v3
+      with:
+        version: 8
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'pnpm'
+    - name: Install dependencies
+      run: pnpm install
+    - name: Zip artifact for deployment
+      run: zip release.zip ./* -r
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
-
-      - name: npm install, build, and test
-        run: |
-          npm install pnpm
-          pnpm install
-          pnpm run build --if-present
-          pnpm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
           name: node-app
           path: release.zip
 
